src/pages/About.css
.about {
  padding-top: 24px;
  padding-bottom: 0px;
  scroll-margin-top: 80px;
  background-color: black;
  color: white;
  z-index: 10;
  position: relative;
}

.headshot {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px;
}

.info-span {
  display: flex;
  gap: 6px;
  flex-wrap: wrap;
  text-align: center;
  align-items: center;
  justify-content: center;
  margin-top: 10px;
}

.bio {
  text-align: center;
  padding-bottom: 0px;
  margin-bottom: 0px;
  margin-top: 0px;
}

.projects {
  text-align: center;
  margin: 0px;
  padding-top: 10px;
}

.education-heading {
  padding-top: 15px;
}

.school {
  padding-left: 15px;
  padding-right: 15px;
  margin-bottom: 0px;
}

.card {
  border-radius: 12px;
  padding: 18px;
  margin: 40px auto;
  width: fit-content;
  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.3);
}

.inset-card {
  border-radius: 12px;
  padding:18px;
  margin: 40px auto;
  width: fit-content;
  box-shadow: inset 0 2px 8px rgba(0,0,0,0.1);
}

.plain-card {
  border-radius: 12px;
  padding: 18px;
  margin: 40px auto;
  width: fit-content;
}

.thin-paragraph {
  padding-left: 15px;
  padding-right: 15px;
  margin-top: 0px;
  margin-bottom: 0px;
}

.github-icon {
  display: block;
  width: 80px;
  height: 80px;
  border-radius: 50%;
}

.github-info {
  text-align: left;
  padding-bottom: 0px;
  margin-bottom: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
}

.followers {
  margin-top: 5px;
}

.about p {
  color: white;
}

